force-app/main/default/objects/leaseworks__Industry_Comps__c/leaseworks__Industry_Comps__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Industry Comps</label>
    <nameField>
        <label>Industry Comps Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industry Comps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>