force-app/main/default/objects/leaseworks__Industry_Comps__c/fields/leaseworks__Collateral__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Collateral__c</fullName>
    <label>Collateral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unsecured</fullName>
            </value>
            <value>
                <fullName>Secured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>