force-app/main/default/objects/leaseworks__Industry_Comps__c/fields/leaseworks__Issuance_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Issuance_Date__c</fullName>
    <label>Issuance Date</label>
    <type>Date</type>
</CustomField>