force-app/main/default/objects/leaseworks__Industry_Comps__c/fields/leaseworks__Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maturity_Date__c</fullName>
    <label>Maturity Date</label>
    <type>Date</type>
</CustomField>