force-app/main/default/objects/leaseworks__Industry_Comps__c/fields/leaseworks__Moodys_Rating__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Moodys_Rating__c</fullName>
    <formula>Null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2206 Moodys Rating</label>
    <type>Text</type>
</CustomField>