force-app/main/default/objects/leaseworks__Industry_Comps__c/fields/leaseworks__Original_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Original_Issue_Date__c</fullName>
    <label>Original Issue Date</label>
    <type>Date</type>
</CustomField>