force-app/main/default/objects/leaseworks__Industry_Comps__c/fields/leaseworks__Security_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Security_Type__c</fullName>
    <label>Security Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sr Unsecured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>