force-app/main/default/objects/leaseworks__Industry_Comps__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Issuance_Date__c</columns>
    <columns>leaseworks__Principal__c</columns>
    <columns>leaseworks__Coupon__c</columns>
    <columns>leaseworks__Security_Type__c</columns>
    <columns>leaseworks__Maturity_Date__c</columns>
    <columns>leaseworks__Bid_bps__c</columns>
    <columns>leaseworks__Bid_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>